# serial-mock-service

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: config.yaml
src/: bytes.rs  capture.rs  cli.rs  config.rs  framing.rs  http.rs  logging.rs  main.rs  matching.rs  port.rs  reload.rs  server.rs  transport.rs
tests/: integration.rs
