[package]
name = "serial-mock-service"
version = "0.1.0"
edition = "2021"
description = "Mock serial scale service exposing a PTY + HTTP injection API for QZ Tray E2E tests"

[dependencies]
nix = { version = "0.29", features = ["fs", "term"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "z"
strip = true
