[package]
name = "serial-mock-service"
version = "0.2.0"
edition = "2021"
description = "Configurable mock serial scale service: multi-PTY, scenario-driven, HTTP-controlled"
license = "MIT"

[dependencies]
nix = { version = "0.29", features = ["fs", "term", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = true
opt-level = "z"
strip = true
